# Chinese-CLIP-opencv-onnxrun

./: README.md
cpp/: CMakeLists.txt
cpp/include/: Tokenizer.hpp  util.hpp
cpp/src/: main.cpp  util.cpp
python/: clip_tokenizer.py  main.py
